fix(build): resolve sass-embedded native binding error in GitHub Actions
- Replace sass-embedded with stable sass package (v1.91.0)
- Update GitHub Actions workflow to use Node.js 20
- Add clean install process with legacy-peer-deps flag
- Remove package-lock.json during CI to prevent binding conflicts
- Verify installation with npm list in workflow

Fixes: Cannot find native binding error in GitHub Pages deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
           
-      - name: Clean npm cache and install dependencies
+      - name: Clean install dependencies
         run: |
+          # Clear npm cache and node_modules for clean install
           npm cache clean --force
           rm -rf node_modules package-lock.json
-          npm install
+          # Install with legacy peer deps to avoid conflicts
+          npm install --legacy-peer-deps
+          # Verify installation
+          npm list --depth=0
         
       - name: Build with Nuxt
         run: npm run generate
