--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "sass-embedded": "^1.90.0"
+    "sass": "^1.91.0"
   },
   "config": {
     "commitizen": {
